2004-03-31  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* BitwiseBinary.cs: added constructor for building it according to
	JSToken enum. return a new object on EvaluateBitwiseBinary (this
	needs a real implementation).
	* expression.cs: added code for evaluation of bitwise operators at emit_op_eval.

	* Statement.cs: added stub for While and DoWhile ast
	representation (reworking my Emit code).
	* jscript-parser-lexer.g: allow iteration statement ast build.

	* FunctionDeclaration.cs: agrouped code for setting custom attribute.

	* expression.cs: added Modulo operator case.

2004-03-16  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* Convert.cs: added rule for string conversion.

	* Plus.cs: added rule for string addition.

	* PostOrPrefixOperator.cs: added constructor, returned to Microsoft.JScript ns, initial Resolve and
	Emit (cases where there's no real operator).

	* StringLiteral.cs: now implements Exp as can appear as a simple
	exp in global code. Added check for Pop generation.

	* expression.cs: added IL generation code for print func call. 
	Args class added get_element, Size and made Resolve behave as the
	others (collect the differents Resolve's return values from each
	of the arguments). Expression class, added default Resolve call
	for non-Exp implementers.

	* jscript-lexer-parser.g: postfix_expr rule now returns a simple
	AST, this handles the case where no postOrPrefixOp present; Unary
	returns an AST too.

	* FormalParameterList.cs: added get_element, retrieves nth element.

2004-03-14  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* ScriptStream.cs: let's print some messages.

	* jscript-lexer-parser.g (STRING_LITERAL): Do not include the ' in the text of the rule.

2004-03-13  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* jscript-lexer-parser.g: keep track of return's parent.
	* Statement.cs: added parent parameter to constructor.

	* expression.cs: refactored Emit code from Identifier, now we take